# aac36451113-proj

./: .gitignore  CMakeLists.txt  common.h  cpu_state.c  cpu_state.h  ex_stage.c  ex_stage.h  id_stage.c  id_stage.h  if_stage.c  if_stage.h  link_call_stack.sh  main.c  mem_stage.c  mem_stage.h  memory.c  memory.h  reg_file.c  reg_file.h  utils.c  utils.h  wb_stage.c
5-stage-multicycle/: CMakeLists.txt
5-stage-multicycle/include/: cpu_state.h  ex_stage.h  id_stage.h  mem_stage.h  memory.h  register.h
5-stage-multicycle/src/: cpu_state.c  id_stage.c  if_stage.c  main.c  mem_stage.c  register.c
5-stage-pipeline/: CMakeLists.txt
5-stage-pipeline-forwarding/: CMakeLists.txt
5-stage-pipeline-forwarding-bp/: CMakeLists.txt
5-stage-pipeline-forwarding-bp/include/: cpu_state.h  ex_stage.h  id_stage.h  if_stage.h  mem_stage.h  register.h  wb_stage.h
5-stage-pipeline-forwarding-bp/src/: branch_predictor.c  cpu_state.c  ex_stage.c  id_stage.c  if_stage.c  main.c  mem_stage.c
5-stage-pipeline-forwarding/include/: cpu_state.h  ex_stage.h  if_stage.h  mem_stage.h  wb_stage.h
5-stage-pipeline-forwarding/src/: cpu_state.c  ex_stage.c  id_stage.c  if_stage.c  register.c  wb_stage.c
5-stage-pipeline/include/: cpu_state.h  if_stage.h  wb_stage.h
5-stage-pipeline/src/: cpu_state.c  ex_stage.c  id_stage.c  if_stage.c  mem_stage.c  register.c  wb_stage.c
examples/: Makefile  fibonacci.c  main.c  main2.c  stdio.h  test.c  test.s  test_printf.c
include/: common.h  cpu_state.h  ex_stage.h  id_stage.h  if_stage.h  mem_stage.h  memory.h  reg_file.h  register.h  utils.h  wb_stage.h
report/: report-1.tex  report-2.tex
src/: cpu_state.c  ex_stage.c  id_stage.c  if_stage.c  main.c  mem_stage.c  memory.c  reg_file.c  register.c  utils.c  wb_stage.c
tomasulo/: CMakeLists.txt
tomasulo/include/: branch_predictor.h  cdb.h  commit.h  common.h  cpu.h  cpu_state.h  dispatch.h  execute.h  fetch.h  issue.h  memory.h  register.h  rob.h  utils.h
tomasulo/src/: branch_predictor.c  cdb.c  commit.c  cpu.c  cpu_state.c  dispatch.c  execute.c  fetch.c  issue.c  main.c  memory.c  register.c  rob.c
